<resources>
    <string name="app_name">cheQin</string>
    <string name="action_settings"></string>
    <string name="app_id">1573126239679708</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="logo_desc" />
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="navigation_drawer_open"> My Pillows</string>
    <string name="navigation_drawer_close"> My Pillows</string>
    <string name="notify">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="description" />
    <string name="notification" />
    <string name="ambercent">Bargain Now</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="rs">\u20B9</string>
    <string name="agreement_terms">By checking this box you are agreeing to the Terms and Conditions the Privacy Policy and the Cancellation Policy</string>
    <string name="enter_city">Enter City</string>
    <string name="title_activity_botel_details">BotelDetailsActivity</string>
    <string name="top_three_ofers">Bargained Offers</string>
    <string name="bargained_offer">Bargained Offer: </string>
    <string name="offer_price">"Offer Price: "</string>
    <string name="error_generic">Sorry…There is something fishy happening now. Please try again.</string>
    <string name="contact_hotel_directly_text">Good news. Your booking has been confirmed. You can contact the hotel directly for any questions.</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mobile">Enter your mobile number</string>
    <string name="error_no_mobile">Please enter a valid mobile number</string>
    <string name="login">Login</string>
    <string name="error_internet">No internet</string>
    <string name="error_general">ERROR OCCURRED</string>
    <string name="confirmationHeadingText">Confirmation</string>
    <string name="adultText">Adults : </string>
    <string name="rooms_heading">Rooms : </string>
    <string name="selected_rooms_heading">Selected Room : </string>
    <string name="room_type">Room Type : </string>
    <string name="hotel_class">Hotel Class : </string>
    <string name="nights_heading">Nights : </string>
    <string name="budget_heading">Budget per night : </string>
    <string name="total_budget_heading">Total Budget : </string>
    <string name="proceed_button_text">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="otp_resend_message_text">Resend otp in %1$d:%2$d minutes</string>
    <string name="success_booking">Your request has been posted successfully. You will be notified with the lowest offers made by the hoteliers shortly (via SMS).\"</string>
    <string name="utel_app">cheQin</string>
    <string name="rupee_amount">₹  %s</string>
    <string name="total_budget">Total Budget</string>
    <string name="for_x_nights">for %d Nights</string>
    <string name="for_1_night">for 1 Night</string>
    <string name="for_x_rooms">%d Rooms</string>
    <string name="for_1_room">1 Room</string>
    <string name="any_special_requests">Write any special requests here</string>
    <string name="budget_per_night">Budget per Night</string>
    <string name="you_are_logged_out">You have been logged out.Please login again to continue.</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
</resources>